--- a/VersionOne.Integration.Tfs.Policy.Deployment.VS2013/VersionOne.Integration.Tfs.Policy.Deployment.VS2013.csproj
+++ b/VersionOne.Integration.Tfs.Policy.Deployment.VS2013/VersionOne.Integration.Tfs.Policy.Deployment.VS2013.csproj
@@ -79,6 +79,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <None Include="app.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
