--- a/VersionOne.Integration.Tfs.Policy.VS2012/packages.config
+++ b/VersionOne.Integration.Tfs.Policy.VS2012/packages.config
@@ -8,8 +8,8 @@
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="OAuth2Client" version="1.6.0.2561" targetFramework="net451" />
   <package id="VersionOne.Integration.Tfs.Core" version="4.0.2.0" targetFramework="net451" />
+  <package id="VersionOne.Integration.TFS.ServerConnector" version="1.1.0.0" targetFramework="net451" />
   <package id="VersionOne.Parsers" version="1.1.14195.67" targetFramework="net451" />
   <package id="VersionOne.SDK.APIClient" version="14.1.1.295" targetFramework="net451" />
-  <package id="VersionOne.ServerConnector" version="1.1.14282.201" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="1.1.0.0" targetFramework="net451" />
 </packages>
