--- a/VersionOne.Integration.Tfs.Policy.VS2013/packages.config
+++ b/VersionOne.Integration.Tfs.Policy.VS2013/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FParsec" version="1.0.1" targetFramework="net451" />
   <package id="FSharp.Data" version="1.1.10" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
-  <package id="OAuth2Client" version="1.6.0.2561" targetFramework="net451" />
-  <package id="VersionOne.Integration.Tfs.Core" version="4.0.3.0" targetFramework="net451" />
-  <package id="VersionOne.Integration.TFS.ServerConnector" version="1.2.0.0" targetFramework="net451" />
-  <package id="VersionOne.SDK.APIClient" version="14.1.1.293" targetFramework="net451" />
+  <package id="OAuth2Client" version="1.6.1.2571" targetFramework="net451" />
+  <package id="VersionOne.Integration.Tfs.Core" version="4.0.2.0" targetFramework="net451" />
+  <package id="VersionOne.Integration.Tfs.ServerConnector" version="4.0.2.0" targetFramework="net451" />
+  <package id="VersionOne.Parsers" version="1.1.0.0" targetFramework="net451" />
+  <package id="VersionOne.SDK.APIClient" version="14.1.1.296" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="1.1.0.0" targetFramework="net451" />
 </packages>
