--- a/VersionOne.Integration.Tfs.Policy.Deployment.VS2013/VersionOne.Integration.Tfs.Policy.Deployment.VS2013.csproj
+++ b/VersionOne.Integration.Tfs.Policy.Deployment.VS2013/VersionOne.Integration.Tfs.Policy.Deployment.VS2013.csproj
@@ -53,6 +53,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CreateVsixContainer>True</CreateVsixContainer>
+    <DeployExtension>True</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
