--- a/VersionOne.Integration.Tfs.Policy.Deployment.VS2015/VersionOne.Integration.Tfs.Policy.Deployment.VS2015.csproj
+++ b/VersionOne.Integration.Tfs.Policy.Deployment.VS2015/VersionOne.Integration.Tfs.Policy.Deployment.VS2015.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Content Include="..\VersionOne.Integration.Tfs.Policy.Deployment.Shared\logo.ico">
       <Link>logo.ico</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="..\VersionOne.Integration.Tfs.Policy.Deployment.Shared\RegistryKeyToAdd.pkgdef">
       <Link>RegistryKeyToAdd.pkgdef</Link>
