--- a/VersionOne.Integration.Tfs.Policy.Deployment.VS2015/VersionOne.Integration.Tfs.Policy.Deployment.VS2015.csproj
+++ b/VersionOne.Integration.Tfs.Policy.Deployment.VS2015/VersionOne.Integration.Tfs.Policy.Deployment.VS2015.csproj
@@ -48,6 +48,7 @@
     <Content Include="..\VersionOne.Integration.Tfs.Policy.Deployment.Shared\LICENSE.md">
       <Link>LICENSE.md</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
